--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,11 @@
 # MongoDB
 MONGODB_URI=mongodb://localhost:27017/fisheries_platform
 
+# Cookies and JWT
+JWT_SECRET=fisheries_platform_jwt_secret_key
+JWT_EXPIRES_IN=7d
+JWT_COOKIE_NAME=user_token
+
 # Firebase Client Configuration (for frontend Firebase Auth)
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDcS39mSCVhcWTtoEH9l93Ys2ActyFvZBw
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=workwave-8cd56.firebaseapp.com
@@ -10,11 +15,11 @@ NEXT_PUBLIC_FIREBASE_APP_ID=1:619939042673:web:25a1e96791a75c8de352d0
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=619939042673
 
 # Cloudflare R2
-CLOUDFLARE_R2_ENDPOINT=https://your-account-id.r2.cloudflarestorage.com
-CLOUDFLARE_R2_ACCESS_KEY_ID=your-access-key-id
-CLOUDFLARE_R2_SECRET_ACCESS_KEY=your-secret-access-key
+CLOUDFLARE_R2_ENDPOINT=https://651824871294266.r2.cloudflarestorage.com
+CLOUDFLARE_R2_ACCESS_KEY_ID=651824871294266
+CLOUDFLARE_R2_SECRET_ACCESS_KEY=psZrGYbjS4Pi9KBm0U66-jkAw2U
 CLOUDFLARE_R2_BUCKET_NAME=fisheries-platform
-CLOUDFLARE_R2_PUBLIC_URL=https://your-bucket.your-domain.com
+CLOUDFLARE_R2_PUBLIC_URL=cloudinary://651824871294266:psZrGYbjS4Pi9KBm0U66-jkAw2U@dcrcxgk5n
 
 
 # Brevo (Sendinblue)
