--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "firebase": "^12.2.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.18.0",
     "next": "14.2.25",
