--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.23.25",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
